# research-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: config.yaml
configs/data/: cifar10.yaml  synthetic.yaml
configs/experiment/: cifar10_baseline.yaml
configs/loss/: composite.yaml
configs/model/: cnn.yaml  mlp.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/scheduler/: cosine.yaml
configs/trainer/: default.yaml
src/research_pipeline/: __init__.py  cli.py  config_schema.py  lit_module.py  train.py
src/research_pipeline/data/: datamodule.py  splitter.py  transforms.py
src/research_pipeline/losses/: composite.py
src/research_pipeline/models/: cnn.py  mlp.py
src/research_pipeline/utils/: device.py  run_io.py
tests/: conftest.py  test_objectives.py
