[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-pipeline"
version = "0.1.0"
description = "Domain-agnostic PyTorch Lightning + Hydra research pipeline for fast, modular idea-testing."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "lightning>=2.2",
    "hydra-core>=1.3",
    "mlflow",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
rp-train = "research_pipeline.train:main"
rp-mlflow-ui = "research_pipeline.cli:mlflow_ui"
rp-export-figures = "research_pipeline.cli:export_figures"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
